samples/_failures_safe/1761077207_802124_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7729f27f.c: In function ‘main’:
./samples/SAFE/__tmp_7729f27f.c:146:5: error: expected identifier or ‘(’ at end of input
  146 |     uint8_t
      |     ^~~~~~~
./samples/SAFE/__tmp_7729f27f.c:146:5: error: expected declaration or statement at end of input
